# PMS_LABS

./: README.md  build.gradle.kts  local.properties  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/androidTest/java/com/example/c2/: ExampleInstrumentedTest.kt
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  native-lib.cpp
src/main/java/com/example/c2/: AddContactActivity.kt  AuthActivity.kt  ContactActivity.kt  Contacts.kt  ContactsActivity.kt  ContactsAdapter.kt  DbHelper.kt  MainActivity.kt  User.kt
src/main/res/layout/: activity_add_contact.xml  activity_auth.xml  activity_contact.xml  activity_contacts.xml  activity_main.xml  contact_in_list.xml
src/main/res/values/: ids.xml  preloaded_fonts.xml  strings.xml  themes.xml
src/main/res/values-night/: themes.xml
src/test/java/com/example/c2/: ExampleUnitTest.kt
